@@ -44,31 +44,31 @@ allprojects {
     group = 'pl.allegro.tech.hermes'
     version = scmVersion.version
 
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 
     project.ext.versions = [
             kafka             : '2.8.2',
             guava             : '23.0',
-            jackson           : '2.11.4',
-            jersey            : '2.35',
-            jetty             : '9.4.19.v20190610',
+            jackson           : '2.15.2',
+            jersey            : '3.1.2',
+            jetty             : '11.0.15',
             curator           : '5.4.0',
             dropwizard_metrics: '4.1.0',
-            micrometer_metrics: '1.2.1',
-            wiremock          : '2.27.2',
-            spock             : '1.3-groovy-2.5',
-            groovy            : '2.5.16',
+            micrometer_metrics: '1.11.1',
+            wiremock          : '3.0.0-beta-10',
+            spock             : '2.4-M1-groovy-4.0',
+            groovy            : '4.0.12',
             alpn_api          : '1.1.2.v20150522',
             avro              : '1.9.1',
             json2avro         : '0.2.14',
             okhttp            : '3.9.1',
             undertow          : '2.0.29.Final',
-            spring_web        : '5.1.5.RELEASE',
+            spring_web        : '6.0.8',
             failsafe          : '2.3.1',
             junit_jupiter     : '5.8.2',
-            testcontainers    : '1.15.3', // versions above require groovy 3.0
-            spring            : '2.4.2',
+            testcontainers    : '1.18.1',
+            spring            : '3.0.6',
             assertj           : '3.22.0'
     ]
 
@@ -77,26 +77,42 @@ allprojects {
     }
 
     dependencies {
-        compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.12'
-        compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+        implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.4'
+        implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
 
-        testCompile group: 'junit', name: 'junit', version: '4.11'
-        testCompile group: 'com.tngtech.java', name: 'junit-dataprovider', version: '1.10.0'
-        testCompile group: 'pl.pragmatists', name: 'JUnitParams', version: '1.0.2'
-        testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
-        testCompile group: 'org.assertj', name: 'assertj-core', version: versions.assertj
-        testCompile group: 'com.jayway.awaitility', name: 'awaitility', version: '1.6.1'
-        testCompile group: 'com.googlecode.catch-exception', name: 'catch-exception', version: '1.2.0'
+        testImplementation group: 'junit', name: 'junit', version: '4.11'
+        testImplementation group: 'com.tngtech.java', name: 'junit-dataprovider', version: '1.10.0'
+        testImplementation group: 'pl.pragmatists', name: 'JUnitParams', version: '1.0.2'
+        testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
+        testImplementation group: 'org.assertj', name: 'assertj-core', version: versions.assertj
+        testImplementation group: 'com.jayway.awaitility', name: 'awaitility', version: '1.6.1'
+        testImplementation group: 'com.googlecode.catch-exception', name: 'catch-exception', version: '1.2.0'
 
         annotationProcessor group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: versions.spring
     }
 
+    // https://chronicle.software/chronicle-support-java-17/
+    ext.chronicleMapJvmArgs = ["--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+                               "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+                               "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
+                               "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                               "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
+                               "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                               "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+                               "--add-opens=java.base/java.io=ALL-UNNAMED",
+                               "--add-opens=java.base/java.util=ALL-UNNAMED"]
+
     test {
+        useJUnitPlatform()
+        def args = []
         if (project.hasProperty('tests.timeout.multiplier')) {
-            jvmArgs = ["-Dtests.timeout.multiplier=${project.property('tests.timeout.multiplier')}"]
+            args = ["-Dtests.timeout.multiplier=${project.property('tests.timeout.multiplier')}"]
         }
+        args += chronicleMapJvmArgs
+        jvmArgs = args
     }
 }
+
 
 configure(subprojects - project(':integration')) {
     apply plugin: 'jacoco'
